--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.2.0",
-    "fast-html-parser": "^1.0.1",
     "fetch-cookie": "^3.0.1",
     "node-fetch": "^3.3.2",
     "node-fetch-cookies": "^2.1.1",
+    "node-html-parser": "^6.1.13",
     "node-jsencrypt": "^1.0.0"
   }
 }
