--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sph-api",
-  "version": "0.0.7",
+  "version": "0.0.7-fixed",
   "description": "",
   "type": "module",
   "main": "index.js",
