Forgot to parse sender on chats

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sph-api",
-  "version": "0.0.7-fixed",
+  "version": "0.0.7-fixed2",
   "description": "",
   "type": "module",
   "main": "index.js",
