--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sph-api",
-  "version": "0.0.7-ts1",
+  "version": "0.0.8",
   "description": "",
   "type": "module",
   "main": "./dist/index.js",
